--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Node.js for frontend
       uses: actions/setup-node@v2
       with:
-        node-version: '14'  # Set to your Node.js version
+        node-version: '14'
 
     - name: Build frontend
       working-directory: frontend
